# ECE-4760-POV-Display

./: CMakeLists.txt  README.md  _config.yml  index.md  main.c
HARDWARE/CAD/: POV_display_motor_adapter.stl  POV_display_motor_mount.stl  POV_display_rotor.stl  POV_display_table_mount.stl  README.md  super_structure.f3d
HARDWARE/ELECTRICAL/pov_display/: fp-info-cache  fp-lib-table  level_shifter.kicad_sym  pov_display.kicad_pcb  pov_display.kicad_prl  pov_display.kicad_pro  pov_display.kicad_sch  pov_display.kicad_sch-bak  sym-lib-table
HARDWARE/ELECTRICAL/pov_display/control_gerber/: pov_display-B_Cu.gbl  pov_display-B_Mask.gbs  pov_display-B_Paste.gbp  pov_display-B_Silkscreen.gbo  pov_display-Edge_Cuts.gm1  pov_display-F_Cu.gtl  pov_display-F_Mask.gts  pov_display-F_Paste.gtp  pov_display-F_Silkscreen.gto  pov_display-NPTH-drl_map.gbr  pov_display-NPTH.drl  pov_display-PTH-drl_map.gbr  pov_display-PTH.drl
HARDWARE/ELECTRICAL/pov_display/gerbers/: pov_display-B_Cu.gbl  pov_display-B_Mask.gbs  pov_display-B_Paste.gbp  pov_display-B_Silkscreen.gbo  pov_display-Edge_Cuts.gm1  (+8 more)
PICO/: .gitignore  CMakeLists.txt  README.md  main.c  pov-final - Shortcut.lnk
PICO/drivers/apa102/: apa102.c  apa102.h
PICO/drivers/hall_effect/: hall_effect.c  hall_effect.h
PICO/drivers/ws2812/: ws2812.c  ws2812.h
PICO/utils/: picow_tcp_client.c  picow_tcp_client.h
PYTHON/: README.md  bmp.py  python_test_tcp_server.py  wifi.py
docs/assets/: test.txt
new_python/: display_driver.py  file_translation.py  index.html  requirements.txt  tcp_server.py  web_server.py
(+14 files in other folders)
